Fixed modal "jumps" on close

--- a/src/scss/misc/_modal.scss
+++ b/src/scss/misc/_modal.scss
@@ -1,26 +1,20 @@
 .modal {
 	$modal__animation--time: .75s;
-    position: fixed;
+	position: fixed;
     top: 0;
     right: 0;
     bottom: 0;
 	left: 0;
-	width: 100vw;
-	height: 100vh;
+	width: 100%;
+	height: 100%;
 	background-color: rgba(0,0,0,.9);
 	z-index: 1050;
-	display: block;
 	visibility: hidden;
 	opacity: 0;
     overflow: hidden;
 	outline: 0;
-	padding: .5rem;
-	border: none;
 	transition: opacity $modal__animation--time ease-out, visibility $modal__animation--time;
 	will-change: transform;
-	@include tablet {
-		padding: 1.75rem;
-	}
 	&.modal--show {
 		overflow-x: hidden;
 		overflow-y: auto;
@@ -33,15 +27,18 @@
 	position: relative;
 	display: flex;
 	flex-direction: column;
+	margin: .5rem;
 	min-height: 95%;
 	pointer-events: auto;
 	background-color: #fff;
 	background-clip: padding-box;
-	border: 1px solid rgba(0,0,0,.2);
 	border-radius: .3rem;
-	@include tablet {
+	@include laptop {
+		max-width: 60em;
+		margin: 1.75rem auto;
+	}
+	@include desktop {
 		max-width: $max-width;
-		margin: 0 auto;
 	}
 }
 
@@ -59,7 +56,7 @@
 
 .modal__body {
 	position: relative;
-    flex: 1 1 auto;
+	flex: 1 1 auto;
 }
 
 .modal--open {
