--- a/src/scss/resets/_r_global.scss
+++ b/src/scss/resets/_r_global.scss
@@ -9,9 +9,15 @@ h4,
 h5,
 h6,
 p,
-ul {
+ul,
+dialog {
 	margin: 0;
 	padding: 0;
+}
+
+dialog {
+	border: none;
+	display: block;
 }
 
 ul {
